# gp-dune-bridge

./: .gitignore  Cargo.toml  README.md  Readme.md  app_data_referral_relationship.json  distinct_app_data.json
.github/workflows/: deploy.yaml
data/: app_data_referral_relationship.json  distinct_app_data.json  user_data_entire_history.json
data/referral_data/: app_data_referral_relationship.json
data/user_data/: user_data_from2021-09-28.json
docker/: Dockerfile.binary  deploy.sh
dune_api_scripts/: duneanalytics.py  modify_and_execute_dune_query_for_entire_history_trading_data.py  modify_and_execute_dune_query_for_todays_trading_data.py  queries.py  store_query_result_all_distinct_app_data.py  store_query_result_for_entire_history_trading_data.py  store_query_result_for_todays_trading_data.py  utils.py
dune_data_api/: distinct_app_data.json  duneanalytics.py  execute_dune_query_for_all_app_data.py  modify_and_execute_dune_query_for_overalls_trading_volume.py  modify_and_execute_dune_query_for_todays_trading_volume.py  modify_dune_query.py  requirements.txt  store_all_distinct_app_data.py  store_dune_data.py  store_trading_data_for_entire_history.py  store_trading_data_for_today.py
dune_data_api/docker/: Dockerfile.binary
src/: api.rs  date_de_serialization.rs  dune_data_loading.rs  in_memory_db_maintainance.rs  in_memory_maintainance.rs  in_memory_maintenance.rs  lib.rs  main.rs  metrics.rs  models.rs  referral_maintenance.rs
src/api/: get_profile.rs
src/models/: app_data_from_json.rs  dune_download.rs  dune_trading_data_download.rs  referral_store.rs  (+1 more)
(+2 files in other folders)
