[package]
name = "gpdata"
version = "0.1.0"
edition = "2018"

[lib]
name = "gpdata"
path = "src/lib.rs"

[[bin]]
name = "gpdata"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
primitive-types = "0.10.1"
prometheus = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = {version = "1.0"}
serde_with = "1.9.4"
structopt = "0.3.22"
substring = "1.4.5"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.26"
warp = "0.3"
cid = "0.7.0"
multihash = "0.10"
reqwest = "0.11.4"
